<resources>
    <string name="app_name">Tes Juz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Don\'t have an account yet? </string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_login">Sign in.</string>
    <string name="move_to_register">Create one.</string>
    <string name="have_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="quotes_reminder">\"Consistency is The Key\"</string>
    <string name="remind_me_to_murajaah_at">Remind me to murajaah at:</string>
    <string name="repeat">Repeat</string>
    <string name="success_login">Successfully Logged In!</string>
    <string name="invalid_login">Invalid login! Please try again.</string>
    <string name="empty_fields_toast">Please fill all fields!</string>
    <string name="password_not_match">Password not match!</string>
    <string name="username_is_exist">Username is exist!</string>
    <string name="success_register">Successfully register!</string>
    <string name="success_reminder">Reminder set successfully</string>
    <string name="fail_reminder">Please choose minimum 1 day schedule!</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_message">It\'s Quran Time! Don\'t forget to interact with Quran today.</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="the_next_ayah_is">The Next Ayah is:</string>
    <string name="score">Score</string>
    <string name="reattempt_quiz">Reattempt Quiz</string>
    <string name="back_to_home">Back to Home</string>
    <string name="try_again">Try Again</string>
    <string name="correct">Your answer is Correct</string>
    <string name="wrong">Your answer is Wrong</string>
    <string name="score_2">Score:</string>
    <string name="question_label">Question</string>
    <string name="getting_juz_data">Getting Juz Data....</string>
    <string name="failed_to_get_juz_data">Failed to get juz data</string>
    <string name="alert_dialog_quit">Are you sure you want quit? Your progress will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="capture_progress_report_card">Capture Progress Report Card</string>
    <string name="about_app">About App</string>
    <string name="help_you_interact_more_with_holy_quran">Help you interact more with The Holy Quran.</string>
</resources>