<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".view.ReminderActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_set_reminder">

        <LinearLayout
            android:id="@+id/topContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/quotes_reminder"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_me_to_murajaah_at"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:theme="@style/TimePicker"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/dayPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/set_reminder"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>